// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/molecules/GraphKeyPoints.vue snapshot default 1`] = `
<g>
  <g
    class="view-only"
  >
    <g>
      
      <g>
        <g
          fill="none"
          stroke="green"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <line
            x1="-20000"
            x2="0"
            y1="5"
            y2="5"
          />
          <!-- horizon after to -->
          
          <line
            stroke-width="1"
            x1="0"
            x2="0"
            y1="5"
            y2="50"
          />
          
        </g>
      </g>
      <g>
        <g
          fill="none"
          stroke="green"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <!--v-if-->
          <!-- horizon after to -->
          <line
            x1="0"
            x2="20000"
            y1="50"
            y2="50"
          />
        </g>
      </g>
      
    </g>
  </g>
  <g>
    
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="5"
        data-id="a"
        data-key="translateX"
        data-type="keyframe-prop"
        fill="green"
        r="5"
        stroke="#777"
        stroke-width="1"
      />
    </g>
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="50"
        data-id="b"
        data-key="translateX"
        data-type="keyframe-prop"
        fill="green"
        r="5"
        stroke="#777"
        stroke-width="1"
      />
    </g>
    
  </g>
  <g>
    
    <g>
      <!--v-if-->
    </g>
    <g>
      <!--v-if-->
    </g>
    
  </g>
</g>
`;

exports[`src/components/elements/molecules/GraphKeyPoints.vue snapshot selected 1`] = `
<g>
  <g
    class="view-only"
  >
    <g>
      
      <g>
        <g
          fill="none"
          stroke="#fff"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <line
            x1="-20000"
            x2="0"
            y1="5"
            y2="5"
          />
          <!-- horizon after to -->
          
          <line
            stroke-width="1"
            x1="0"
            x2="0"
            y1="5"
            y2="50"
          />
          
        </g>
      </g>
      <g>
        <g
          fill="none"
          stroke="#fff"
          stroke-width="1"
        >
          <!-- horizon before from -->
          <!--v-if-->
          <!-- horizon after to -->
          <line
            x1="0"
            x2="20000"
            y1="50"
            y2="50"
          />
        </g>
      </g>
      
    </g>
  </g>
  <g>
    
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="5"
        data-id="a"
        data-key="translateX"
        data-type="keyframe-prop"
        fill="orange"
        r="5"
        stroke="#000"
        stroke-width="1"
      />
    </g>
    <g>
      <title>
        translateX
      </title>
      <circle
        cx="0"
        cy="50"
        data-id="b"
        data-key="translateX"
        data-type="keyframe-prop"
        fill="#fff"
        r="5"
        stroke="#777"
        stroke-width="1"
      />
    </g>
    
  </g>
  <g>
    
    <g>
      <g>
        <g
          class="view-only"
          fill="#fff"
          stroke="#000"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
        <g
          fill="#fff"
          stroke="#000"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
        <g
          fill="transparent"
        >
          <!--v-if-->
          <!--v-if-->
        </g>
      </g>
    </g>
    <g>
      <!--v-if-->
    </g>
    
  </g>
</g>
`;
